--- a/special-pages/pages/special-error/src/locales/en/special-error.json
+++ b/special-pages/pages/special-error/src/locales/en/special-error.json
@@ -34,7 +34,7 @@
     "note": "Error description shown in an error page that warns users of security risks on a website due to malware distribution."
   },
   "malwareAdvancedInfoHeading": {
-    "title": "If you believe this website is safe, <a>you can report an error</a>. You can still visit the website at your own risk.",
+    "title": "If you believe this website is safe, you can <a>report an error</a>. You can still visit the website at your own risk.",
     "note": "Title of the Advanced info section shown in an error page that warns users of security risks on a website due to malware distribution."
   },
   "phishingPageHeading": {
@@ -46,7 +46,7 @@
     "note": "Error description shown in an error page that warns users of security risks on a website due to Phishing issues."
   },
   "phishingAdvancedInfoHeading": {
-    "title": "DuckDuckGo warns you when a website has been flagged as malicious. If you believe this website is safe, you can <a>report an error.</a>",
+    "title": "DuckDuckGo warns you when a website has been flagged as malicious. If you believe this website is safe, you can <a>report an error</a>.",
     "note": "Title of the Advanced info section shown in an error page that warns users of security risks on a website due to Phishing issues."
   },
   "phishingAdvancedInfoText_1": {
