chore: init work

--- a/special-pages/pages/new-tab/src/locales/en/new-tab.json
+++ b/special-pages/pages/new-tab/src/locales/en/new-tab.json
@@ -42,7 +42,7 @@
     "note": "Button label text for an action that removes the widget from the screen."
   },
   "stats_menuTitle": {
-    "title": "Blocked Tracking Attempts",
+    "title": "Privacy Pro",
     "note": "Used as a label in a customization menu"
   },
   "stats_noActivity": {
