--- a/special-pages/pages/duckplayer/public/locales/en/duckplayer.json
+++ b/special-pages/pages/duckplayer/public/locales/en/duckplayer.json
@@ -34,8 +34,24 @@
     "note": "Shown when the page URL doesn't match a known video ID. Note for translators: The <b> tag makes the word 'ERROR:' bold. Depending on the grammar of the target language, you might need to move it so that the correct word is emphasized."
   },
   "botDetectedError": {
-    "title": "<b>ERROR:</b> Bot detected",
+    "title": "We are not able to connect you with this video",
     "note": "Message for bot detected"
+  },
+  "botDetectedErrorTip1": {
+    "title": "If you use a VPN, try turning it off and reload the video.",
+    "note": "A tip on how to solve the bot detected error"
+  },
+  "botDetectedErrorTip2": {
+    "title": "If turning off the VPN doesn’t work, you can view this video on YouTube without the added privacy features of Duck Player.",
+    "note": "A tip on how to solve the bot detected error"
+  },
+  "blockedVideoError": {
+    "title": "YouTube has blocked this video in Duck Player",
+    "note": "Message for when the video is blocked by YouTube"
+  },
+  "blockedVideoErrorMessage": {
+    "title": "View this video on YouTube without the added privacy features of Duck Player.",
+    "note": "A suggested solution to the blocked video error is to watch it directly on YouTube. This message suggests that as a solution to the user."
   },
   "tooltipInfo": {
     "title": "Duck Player provides a clean viewing experience without personalized ads and prevents viewing activity from influencing your YouTube recommendations."
