--- a/special-pages/pages/special-error/public/locales/en/special-error.json
+++ b/special-pages/pages/special-error/public/locales/en/special-error.json
@@ -29,6 +29,10 @@
     "title": "Warning: This site may be a security risk",
     "note": "Title shown in an error page that warn users of security risks on a website due to malware distribution"
   },
+  "malwareTabTitle": {
+    "title": "Warning: Security Risk",
+    "note": "Title shown in the browser window or tab when the current page may be a security risk due to malware"
+  },
   "malwareWarningText": {
     "title": "DuckDuckGo blocked this page because it may be distributing malware designed to compromise your device or steal your personal information. <a>Learn more</a>",
     "note": "Error description shown in an error page that warns users of security risks on a website due to malware distribution."
@@ -40,6 +44,10 @@
   "phishingPageHeading": {
     "title": "Warning: This site may be a security risk",
     "note": "Title shown in an error page that warn users of security risks on a website due to Phishing issues"
+  },
+  "phishingTabTitle": {
+    "title": "Warning: Security Risk",
+    "note": "Title shown in the browser window or tab when the current page may be a security risk due to phishing"
   },
   "phishingWarningText": {
     "title": "This website may be impersonating a legitimate site in order to trick you into providing personal information, such as passwords or credit card numbers. <a>Learn more</a>",
