--- a/special-pages/pages/special-error/public/locales/en/special-error.json
+++ b/special-pages/pages/special-error/public/locales/en/special-error.json
@@ -26,8 +26,8 @@
     "note": "Button shown in an error page that warns users of security risks on a website due to Phishing or Malware issues. The buttons allows the user to visit the website anyway despite the risks."
   },
   "malwarePageHeading": {
-    "title": "Warning: This site may be a security risk",
-    "note": "Title shown in an error page that warn users of security risks on a website due to malware distribution"
+    "title": "Warning: This site may be a{newline}security risk",
+    "note": "Title shown in an error page that warn users of security risks on a website due to malware distribution. The {newline} part should not be translated. It should be placed within the sentence to avoid having a single word hanging on the last line"
   },
   "malwareTabTitle": {
     "title": "Warning: Security Risk",
@@ -42,8 +42,8 @@
     "note": "Title of the Advanced info section shown in an error page that warns users of security risks on a website due to malware distribution."
   },
   "phishingPageHeading": {
-    "title": "Warning: This site may be a security risk",
-    "note": "Title shown in an error page that warn users of security risks on a website due to Phishing issues"
+    "title": "Warning: This site may be a{newline}security risk",
+    "note": "Title shown in an error page that warn users of security risks on a website due to Phishing issues. The {newline} part should not be translated. It should be placed within the sentence to avoid having a single word hanging on the last line"
   },
   "phishingTabTitle": {
     "title": "Warning: Security Risk",
