--- a/special-pages/pages/new-tab/public/locales/pt/new-tab.json
+++ b/special-pages/pages/new-tab/public/locales/pt/new-tab.json
@@ -301,7 +301,7 @@
     "note" : "Button label, allows the user to remove the specified domain from their favorites"
   },
   "activity_itemRemove" : {
-    "title" : "Remove {domain} do histórico",
+    "title" : "Remover {domain} do histórico",
     "note" : "Button label for clearing browsing history for a given domain."
   },
   "activity_burn" : {
