--- a/special-pages/pages/history/public/locales/ru/history.json
+++ b/special-pages/pages/history/public/locales/ru/history.json
@@ -9,11 +9,11 @@
     }]
   },
   "empty_title" : {
-    "title" : "Здесь нечего смотреть!",
+    "title" : "Здесь ничего нет!",
     "note" : "Text shown where there are no remaining history entries"
   },
   "empty_text" : {
-    "title" : "Page visits will appear once you start browsing.",
+    "title" : "Информация о посещении страниц появится после того, как вы начнете просмотр.",
     "note" : "Placeholder text when there's no results to show"
   },
   "delete_all" : {
@@ -37,15 +37,15 @@
     "note" : "The placeholder text in a search input field."
   },
   "show_history_all" : {
-    "title" : "Показать всю историю",
+    "title" : "Отобразить всю историю",
     "note" : "Button text for an action that removes all filters and searches, and replaces the list with all history."
   },
   "show_history_older" : {
-    "title" : "Show older history",
+    "title" : "Показать более раннюю историю",
     "note" : "Button that shows older history entries"
   },
   "show_history_for" : {
-    "title" : "Show history for {range}",
+    "title" : "Показать историю за {range}",
     "note" : "The placeholder {range} in the title will be dynamically replaced with specific date ranges such as 'Today', 'Yesterday', or days of the week like 'Monday'. For example, if the range is set to 'Today', the title will become 'Show history for Today'."
   },
   "delete_history_all" : {
@@ -57,11 +57,11 @@
     "note" : "Button that deletes older history entries."
   },
   "delete_history_for" : {
-    "title" : "Delete history for {range}",
+    "title" : "Удалить историю за {range}",
     "note" : "The placeholder {range} in the title will be dynamically replaced with specific date ranges such as 'Today', 'Yesterday', or days of the week like 'Monday'. For example, if the range is set to 'Today', the title will become 'Delete history for Today'."
   },
   "search_your_history" : {
-    "title" : "Search your history",
+    "title" : "Поиск по истории",
     "note" : "Label text for screen readers. It's shown next to the search input field"
   },
   "range_all" : {
@@ -77,15 +77,15 @@
     "note" : "Label on a button that shows history entries for yesterday only"
   },
   "range_monday" : {
-    "title" : "Monday",
+    "title" : "понедельник",
     "note" : "Label on a button that shows history entries for monday only"
   },
   "range_tuesday" : {
-    "title" : "Tuesday",
+    "title" : "вторник",
     "note" : "Label on a button that shows history entries for tuesday only"
   },
   "range_wednesday" : {
-    "title" : "Wednesday",
+    "title" : "среду",
     "note" : "Label on a button that shows history entries for wednesday only"
   },
   "range_thursday" : {
@@ -93,11 +93,11 @@
     "note" : "Label on a button that shows history entries for thursday only"
   },
   "range_friday" : {
-    "title" : "Friday",
+    "title" : "пятницу",
     "note" : "Label on a button that shows history entries for friday only"
   },
   "range_saturday" : {
-    "title" : "Saturday",
+    "title" : "субботу",
     "note" : "Label on a button that shows history entries for saturday only"
   },
   "range_sunday" : {
