--- a/special-pages/pages/release-notes/public/locales/en/release-notes.json
+++ b/special-pages/pages/release-notes/public/locales/en/release-notes.json
@@ -85,7 +85,7 @@
         "note": "A button label that allows the user to retry getting the release notes after a loading error"
     },
     "loadingError": {
-        "title": "Error loading release notes",
+        "title": "Error loading update summary",
         "note": "A message shown when the application experienced a loading error"
     },
     "thankyou": {
