--- a/special-pages/pages/release-notes/public/locales/en/release-notes.json
+++ b/special-pages/pages/release-notes/public/locales/en/release-notes.json
@@ -91,5 +91,9 @@
     "thankyou": {
         "title": "Thanks for choosing DuckDuckGo!",
         "note": "Subheader text for tag that appears above page header expressing gratitude for choosing DuckDuckGo"
+    },
+    "whatsNewAtDuckDuckGoLink": {
+        "title": "What’s New at DuckDuckGo",
+        "note": "Text for a link that opens the DuckDuckGo blog to show the latest news and updates"
     }
 }
