--- a/special-pages/pages/release-notes/public/locales/en/release-notes.json
+++ b/special-pages/pages/release-notes/public/locales/en/release-notes.json
@@ -93,7 +93,7 @@
         "note": "Subheader text for tag that appears above page header expressing gratitude for choosing DuckDuckGo"
     },
     "whatsNewAtDuckDuckGoLink": {
-        "title": "What’s New at DuckDuckGo",
+        "title": "See what else we’ve been working on",
         "note": "Text for a link that opens the DuckDuckGo blog to show the latest news and updates"
     }
 }
